# lazycoder

./: .clang-format  .gitignore  CMakeLists.txt
lang/: lazycoder_en_US.ts  lazycoder_ru_RU.ts
res/: icons.qrc
scripts/: configure_vscode.py  paths.template.json  recurse_utils.cmake
scripts/cmake/: add_exe_utils.cmake  recurse_utils.cmake  version_utils.cmake
scripts/python/: build.py  build_utils.py  clean.py  configure.py  install.py
src/: common.h  main.cpp
src/appversion/: appversion.cpp  appversion.h  appversion.h.in
src/mainwindow/: mainwindow.cpp  mainwindow.h  mainwindow.ui
src/projectLoader/: ProjectLoader.cpp  ProjectLoader.h
src/rsc/: icons.qrc
src/settings/: settings.cpp
src/settingsFrame/: settingsFrame.ui
src/utils/: common.h  init_logger.cpp  init_logger.h
src/utils/archive/: archive.cpp  archive.h
src/utils/settings/: settings.cpp  settings.h
src/windows/mainwindow/: mainwindow.cpp  mainwindow.h  mainwindow.ui
src/windows/settingsForm/: SettingsForm.cpp  SettingsForm.h  SettingsForm.ui
